@@ -16,11 +16,15 @@
 
 package com.badlogic.gdx.backends.gwt.preloader;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
+import java.io.*;
+import java.math.BigInteger;
 import java.net.URLConnection;
+import java.nio.file.FileSystems;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.security.DigestInputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -37,16 +41,20 @@ import com.google.gwt.core.ext.UnableToCompleteException;
 import com.google.gwt.user.rebind.ClassSourceFileComposerFactory;
 import com.google.gwt.user.rebind.SourceWriter;
 
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
+
 /** Copies assets from the path specified in the modules gdx.assetpath configuration property to the war/ folder and generates the
  * assets.txt file. The type of a file is determined by an {@link AssetFilter}, which is either created by instantiating the class
  * specified in the gdx.assetfilterclass property, or falling back to the {@link DefaultAssetFilter}.
  * @author mzechner */
 public class PreloaderBundleGenerator extends Generator {
 	private class Asset {
+		String filePathOrig;
 		FileWrapper file;
 		AssetType type;
 
-		public Asset (FileWrapper file, AssetType type) {
+		public Asset (String filePathOrig, FileWrapper file, AssetType type) {
+			this.filePathOrig = filePathOrig;
 			this.file = file;
 			this.type = type;
 		}
@@ -57,7 +65,7 @@ public class PreloaderBundleGenerator extends Generator {
 		System.out.println(new File(".").getAbsolutePath());
 		String assetPath = getAssetPath(context);
 		String assetOutputPath = getAssetOutputPath(context);
-		if ( assetOutputPath == null ){
+		if (assetOutputPath == null) {
 			assetOutputPath = "war/";
 		}
 		AssetFilter assetFilter = getAssetFilter(context);
@@ -65,14 +73,12 @@ public class PreloaderBundleGenerator extends Generator {
 		FileWrapper source = new FileWrapper(assetPath);
 		if (!source.exists()) {
 			source = new FileWrapper("../" + assetPath);
-			if (!source.exists())
-				throw new RuntimeException("assets path '" + assetPath
-					+ "' does not exist. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
+			if (!source.exists()) throw new RuntimeException("assets path '" + assetPath
+				+ "' does not exist. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
 		}
-		if (!source.isDirectory())
-			throw new RuntimeException("assets path '" + assetPath
-				+ "' is not a directory. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
-		System.out.println("Copying resources from " + assetPath + " to " + assetOutputPath );
+		if (!source.isDirectory()) throw new RuntimeException("assets path '" + assetPath
+			+ "' is not a directory. Check your gdx.assetpath property in your GWT project's module gwt.xml file");
+		System.out.println("Copying resources from " + assetPath + " to " + assetOutputPath);
 		System.out.println(source.file.getAbsolutePath());
 		FileWrapper target = new FileWrapper("assets/"); // this should always be the war/ directory of the GWT project.
 		System.out.println(target.file.getAbsolutePath());
@@ -82,87 +88,115 @@ public class PreloaderBundleGenerator extends Generator {
 		if (target.exists()) {
 			if (!target.deleteDirectory()) throw new RuntimeException("Couldn't clean target path '" + target + "'");
 		}
-		ArrayList<Asset> assets = new ArrayList<Asset>();
+		ArrayList<Asset> assets = new ArrayList<>();
 		copyDirectory(source, target, assetFilter, assets);
 
 		// Now collect classpath files and copy to assets
 		List<String> classpathFiles = getClasspathFiles(context);
-		for (String classpathFile : classpathFiles) {			
+		for (String classpathFile : classpathFiles) {
 			if (assetFilter.accept(classpathFile, false)) {
+				FileWrapper orig = target.child(classpathFile);
+				FileWrapper dest = target.child(orig.name());
 				try {
-					InputStream is = context.getClass().getClassLoader().getResourceAsStream(classpathFile);
-					FileWrapper dest = target.child(classpathFile);
-					dest.write(is, false);
-					assets.add(new Asset(dest, assetFilter.getType(dest.path())));
-					is.close();
+					InputStream resourceStream = context.getClass().getClassLoader().getResourceAsStream(classpathFile);
+					copy(resourceStream, orig.path(), dest, assetFilter, assets);
 				} catch (IOException e) {
 					e.printStackTrace();
-				}			
+				}
 			}
-		}		
-		
-		HashMap<String, ArrayList<Asset>> bundles = new HashMap<String, ArrayList<Asset>>();
+		}
+
+		HashMap<String, ArrayList<Asset>> bundles = new HashMap<>();
 		for (Asset asset : assets) {
 			String bundleName = assetFilter.getBundleName(asset.file.path());
 			if (bundleName == null) {
 				bundleName = "assets";
-			}			
+			}
 			ArrayList<Asset> bundleAssets = bundles.get(bundleName);
 			if (bundleAssets == null) {
-				bundleAssets = new ArrayList<Asset>();
+				bundleAssets = new ArrayList<>();
 				bundles.put(bundleName, bundleAssets);
 			}
 			bundleAssets.add(asset);
 		}
 
+		// Write the tokens for Preloader.preload()
 		for (Entry<String, ArrayList<Asset>> bundle : bundles.entrySet()) {
-			StringBuffer buffer = new StringBuffer();
+			StringBuilder sb = new StringBuilder();
 			for (Asset asset : bundle.getValue()) {
-				String path = asset.file.path().replace('\\', '/').replace(assetOutputPath + "assets/", "").replaceFirst("assets", "");
-				if (path.startsWith("/")) path = path.substring(1);
-				buffer.append(asset.type.code);
-				buffer.append(":");
-				buffer.append(path);
-				buffer.append(":");
-				buffer.append(asset.file.isDirectory() ? 0 : asset.file.length());
-				buffer.append(":");
+				String pathOrig = asset.filePathOrig.replace('\\', '/').replace(assetOutputPath, "").replaceFirst("assets/", "");
+				if (pathOrig.startsWith("/")) pathOrig = pathOrig.substring(1);
+				String pathMd5 = asset.file.path().replace('\\', '/').replace(assetOutputPath, "").replaceFirst("assets/", "");
+				if (pathMd5.startsWith("/")) pathMd5 = pathMd5.substring(1);
+				sb.append(asset.type.code);
+				sb.append(":");
+				sb.append(pathOrig);
+				sb.append(":");
+				sb.append(pathMd5);
+				sb.append(":");
+				sb.append(asset.file.isDirectory() ? 0 : asset.file.length());
+				sb.append(":");
 				String mimetype = URLConnection.guessContentTypeFromName(asset.file.name());
-				buffer.append(mimetype == null ? "application/unknown" : mimetype);
-				buffer.append("\n");
+				sb.append(mimetype == null ? "application/unknown" : mimetype);
+				sb.append(":");
+				sb.append(asset.file.isDirectory() || assetFilter.preload(pathOrig) ? '1' : '0');
+				sb.append("\n");
 			}
-			target.child(bundle.getKey() + ".txt").writeString(buffer.toString(), false);
+			target.child(bundle.getKey() + ".txt").writeString(sb.toString(), false);
 		}
 		return createDummyClass(logger, context);
 	}
 
-	private void copyFile (FileWrapper source, FileWrapper dest, AssetFilter filter, ArrayList<Asset> assets) {
-		if (!filter.accept(dest.path(), false)) return;
+	private void copyFile (FileWrapper source, String filePathOrig, FileWrapper dest, AssetFilter filter,
+		ArrayList<Asset> assets) {
+		if (!filter.accept(filePathOrig, false)) return;
 		try {
-			assets.add(new Asset(dest, filter.getType(dest.path())));
-			dest.write(source.read(), false);
-		} catch (Exception ex) {
-			throw new GdxRuntimeException("Error copying source file: " + source + "\n" //
-				+ "To destination: " + dest, ex);
+			copy(source.read(), filePathOrig, dest, filter, assets);
+		} catch (IOException e) {
+			throw new GdxRuntimeException("Error copying source file: " + source + "\n" + "To destination: " + dest, e);
 		}
 	}
 
 	private void copyDirectory (FileWrapper sourceDir, FileWrapper destDir, AssetFilter filter, ArrayList<Asset> assets) {
 		if (!filter.accept(destDir.path(), true)) return;
-		assets.add(new Asset(destDir, AssetType.Directory));
+		assets.add(new Asset(destDir.path(), destDir, AssetType.Directory));
 		destDir.mkdirs();
 		FileWrapper[] files = sourceDir.list();
-		for (int i = 0, n = files.length; i < n; i++) {
-			FileWrapper srcFile = files[i];
-			FileWrapper destFile = destDir.child(srcFile.name());
-			if (srcFile.isDirectory())
+		for (FileWrapper srcFile : files) {
+			if (srcFile.isDirectory()) {
+				FileWrapper destFile = destDir.child(srcFile.name());
 				copyDirectory(srcFile, destFile, filter, assets);
-			else
-				copyFile(srcFile, destFile, filter, assets);
+			} else {
+				FileWrapper destFile = destDir.child(srcFile.name());
+				copyFile(srcFile, destDir.child(srcFile.name()).path(), destFile, filter, assets);
+			}
+		}
+	}
+
+	private void copy (InputStream source, String filePathOrig, FileWrapper dest, AssetFilter filter, ArrayList<Asset> assets)
+		throws IOException {
+		try (InputStream in = source) {
+			try {
+				// Calculate an MD5 hash while we copy the file
+				MessageDigest digest = MessageDigest.getInstance("MD5");
+				DigestInputStream digestInputStream = new DigestInputStream(in, digest);
+				dest.write(digestInputStream, false);
+
+				// Add the hash to the file name, then move the file to the new path
+				FileWrapper newDest = dest.parent().child(fileNameWithHash(dest, digest));
+				Files.move(toPath(dest.file()), toPath(newDest.file()), REPLACE_EXISTING);
+				assets.add(new Asset(filePathOrig, newDest, filter.getType(dest.path())));
+			} catch (NoSuchAlgorithmException e) {
+				// Fallback to a build timestamp if we can't calculate an MD5 hash
+				FileWrapper newDest = dest.parent().child(fileNameWithTimestamp(dest));
+				newDest.write(in, false);
+				assets.add(new Asset(filePathOrig, newDest, filter.getType(dest.path())));
+			}
 		}
 	}
 
 	private AssetFilter getAssetFilter (GeneratorContext context) {
-		ConfigurationProperty assetFilterClassProperty = null;
+		ConfigurationProperty assetFilterClassProperty;
 		try {
 			assetFilterClassProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetfilterclass");
 		} catch (BadPropertyValueException e) {
@@ -174,7 +208,7 @@ public class PreloaderBundleGenerator extends Generator {
 		String assetFilterClass = assetFilterClassProperty.getValues().get(0);
 		if (assetFilterClass == null) return new DefaultAssetFilter();
 		try {
-			return (AssetFilter)Class.forName(assetFilterClass).newInstance();
+			return (AssetFilter)Class.forName(assetFilterClass).getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException("Couldn't instantiate custom AssetFilter '" + assetFilterClass
 				+ "', make sure the class is public and has a public default constructor", e);
@@ -182,7 +216,7 @@ public class PreloaderBundleGenerator extends Generator {
 	}
 
 	private String getAssetPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetpath");
 		} catch (BadPropertyValueException e) {
@@ -194,15 +228,14 @@ public class PreloaderBundleGenerator extends Generator {
 				"No gdx.assetpath defined. Add <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> to your GWT projects gwt.xml file");
 		}
 		String paths = assetPathProperty.getValues().get(0);
-		if(paths == null) {
+		if (paths == null) {
 			throw new RuntimeException(
 				"No gdx.assetpath defined. Add <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> to your GWT projects gwt.xml file");
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
-			for(String token: tokens) {
+			for (String token : tokens) {
 				System.out.println(token);
-				if(new FileWrapper(token).exists() || new FileWrapper("../" + token).exists()) {
+				if (new FileWrapper(token).exists() || new FileWrapper("../" + token).exists()) {
 					return token;
 				}
 			}
@@ -210,9 +243,9 @@ public class PreloaderBundleGenerator extends Generator {
 				"No valid gdx.assetpath defined. Fix <set-configuration-property name=\"gdx.assetpath\" value=\"relative/path/to/assets/\"/> in your GWT projects gwt.xml file");
 		}
 	}
-	
+
 	private String getAssetOutputPath (GeneratorContext context) {
-		ConfigurationProperty assetPathProperty = null;
+		ConfigurationProperty assetPathProperty;
 		try {
 			assetPathProperty = context.getPropertyOracle().getConfigurationProperty("gdx.assetoutputpath");
 		} catch (BadPropertyValueException e) {
@@ -222,37 +255,34 @@ public class PreloaderBundleGenerator extends Generator {
 			return null;
 		}
 		String paths = assetPathProperty.getValues().get(0);
-		if(paths == null) {
+		if (paths == null) {
 			return null;
 		} else {
-			ArrayList<String> existingPaths = new ArrayList<String>();
 			String[] tokens = paths.split(",");
 			String path = null;
-			for(String token: tokens) {
-				if(new FileWrapper(token).exists()) {
+			for (String token : tokens) {
+				if (new FileWrapper(token).exists() || new FileWrapper(token).mkdirs()) {
 					path = token;
 				}
 			}
-			if (path != null && !path.endsWith("/")){
+			if (path != null && !path.endsWith("/")) {
 				path += "/";
-			}			
+			}
 			return path;
 		}
 	}
 
-	private List<String> getClasspathFiles(GeneratorContext context) {
-		List<String> classpathFiles = new ArrayList<String>();
+	private List<String> getClasspathFiles (GeneratorContext context) {
+		List<String> classpathFiles = new ArrayList<>();
 		try {
 			ConfigurationProperty prop = context.getPropertyOracle().getConfigurationProperty("gdx.files.classpath");
-			for (String value : prop.getValues()) {
-				classpathFiles.add(value);
-			}
+			classpathFiles.addAll(prop.getValues());
 		} catch (BadPropertyValueException e) {
 			// Ignore
-		}		
+		}
 		return classpathFiles;
 	}
-	
+
 	private String createDummyClass (TreeLogger logger, GeneratorContext context) {
 		String packageName = "com.badlogic.gdx.backends.gwt.preloader";
 		String className = "PreloaderBundleImpl";
@@ -265,5 +295,29 @@ public class PreloaderBundleGenerator extends Generator {
 		SourceWriter sourceWriter = composer.createSourceWriter(context, printWriter);
 		sourceWriter.commit(logger);
 		return packageName + "." + className;
+	}
+
+	private static String fileNameWithHash (FileWrapper fw, MessageDigest digest) {
+		String hash = String.format("%032x", new BigInteger(1, digest.digest()));
+		String nameWithHash = fw.nameWithoutExtension() + "-" + hash;
+		String extension = fw.extension();
+		if (!extension.isEmpty() || fw.name().endsWith(".")) {
+			nameWithHash = nameWithHash + "." + extension;
+		}
+		return nameWithHash;
+	}
+
+	private static String fileNameWithTimestamp (FileWrapper fw) {
+		String timestamp = String.valueOf(System.currentTimeMillis());
+		String nameWithTimestamp = fw.nameWithoutExtension() + "-" + timestamp;
+		String extension = fw.extension();
+		if (!extension.isEmpty() || fw.name().endsWith(".")) {
+			nameWithTimestamp = nameWithTimestamp + "." + extension;
+		}
+		return nameWithTimestamp;
+	}
+
+	private static Path toPath (File file) {
+		return FileSystems.getDefault().getPath(file.getPath());
 	}
 }
